// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task Archived 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="list-item TASK_ARCHIVED"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        aria-label="archiveTask-1"
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        placeholder="Input title"
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    />
  </div>
</section>
`;

exports[`Storyshots Task Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="list-item TASK_INBOX"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        aria-label="archiveTask-1"
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        placeholder="Input title"
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          aria-label="pinTask-1"
          class="icon-star"
        />
      </a>
    </div>
  </div>
</section>
`;

exports[`Storyshots Task Pinned 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="list-item TASK_PINNED"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        aria-label="archiveTask-1"
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        placeholder="Input title"
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          aria-label="pinTask-1"
          class="icon-star"
        />
      </a>
    </div>
  </div>
</section>
`;

exports[`Storyshots TaskList Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
     
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-1"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-1"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-2"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-2"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-3"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-3"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-4"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-4"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-5"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-5"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-6"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-6"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    
    
  </div>
  
  
</section>
`;

exports[`Storyshots TaskList Empty 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <div
      class="list-items"
    >
      empty
    </div>
     
    
    
  </div>
  
  
</section>
`;

exports[`Storyshots TaskList Loading 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="list-items"
    >
      loading
    </div>
     
     
    
    
  </div>
  
  
</section>
`;

exports[`Storyshots TaskList With Pinned Tasks 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
     
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-1"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-1"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-2"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-2"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-3"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-3"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-4"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-4"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-5"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-5"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      class="list-item TASK_PINNED"
    >
      <label
        class="checkbox"
      >
        <input
          disabled=""
          name="checked"
          type="checkbox"
        />
         
        <span
          aria-label="archiveTask-6"
          class="checkbox-custom"
        />
      </label>
       
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly=""
          type="text"
        />
      </div>
       
      <div
        class="actions"
      >
        <a
          href="/"
        >
          <span
            aria-label="pinTask-6"
            class="icon-star"
          />
        </a>
      </div>
    </div>
    
    
  </div>
  
  
</section>
`;
